--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -1,27 +1,31 @@
 .termynal-comment {
-    color: #4a968f;
-    font-style: italic;
-    display: block;
-  }
-  
-  .termy [data-termynal] {
-    white-space: pre-wrap;
-  }
-  
-  a.external-link::after {
-    /* \00A0 is a non-breaking space
+  color: #4a968f;
+  font-style: italic;
+  display: block;
+}
+
+.termy [data-termynal] {
+  white-space: pre-wrap;
+}
+
+a.external-link::after {
+  /* \00A0 is a non-breaking space
           to make the mark be on the same line as the link
       */
-    content: "\00A0[↪]";
-  }
-  
-  a.internal-link::after {
-    /* \00A0 is a non-breaking space
+  content: '\00A0[↪]';
+}
+
+a.internal-link::after {
+  /* \00A0 is a non-breaking space
           to make the mark be on the same line as the link
       */
-    content: "\00A0↪";
-  }
-  
-  .shadow {
-    box-shadow: 5px 5px 10px #999;
-  }
+  content: '\00A0↪';
+}
+
+.shadow {
+  box-shadow: 5px 5px 10px #999;
+}
+
+.md-grid {
+  max-width: 1440px;
+}
